# rx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
Formula/: rx.rb
action/: action.yml
assets/: banner.txt
benches/: fingerprint_bench.rs
docs/: book.toml
docs/src/: SUMMARY.md  advanced.md  architecture.md  ci.md  commands.md  comparison.md  config-reference.md  configuration.md  installation.md  introduction.md  performance.md  profiles.md  quickstart.md
docs/src/advanced/: daemon.md  lockfile.md  msrv.md  registries.md  remote-cache.md  sandbox.md  semantic-fingerprint.md  telemetry.md  test-orchestration.md  workers.md
docs/src/ci/: github-action.md  vscode.md
docs/src/commands/: build.md  cache.md  deps.md  lint-fmt.md  test.md  workspace.md
editors/vscode/: package.json
editors/vscode/src/: extension.ts
src/: affected.rs  audit.rs  bench.rs  bloat.rs  cargo_output.rs  check.rs  ci.rs  ci_gen.rs  compat.rs  completions.rs  coverage.rs  daemon.rs  deps.rs  doc.rs  doctor.rs  env.rs  expand.rs  fix.rs  hints.rs  insights.rs  lib.rs  lockfile.rs  main.rs  migrate.rs  outdated.rs  output.rs  pipeline.rs  plugin.rs  publish.rs  registry.rs  release.rs  remote_cache.rs  sandbox.rs  sbom.rs  script.rs  selfupdate.rs  semantic_hash.rs  size.rs  speculative.rs  stats.rs  (+7 more)
src/cache/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/fmt/: mod.rs
src/lint/: mod.rs
src/pkg/: mod.rs
src/test/: mod.rs
src/toolchain/: mod.rs
src/watch/: mod.rs
src/workspace/: mod.rs
tests/: cache_tests.rs  cli_tests.rs  config_tests.rs  integration_tests.rs  workspace_tests.rs
