[package]
name = "rx"
version = "0.1.0"
edition = "2024"
description = "A fast, unified Rust toolchain manager"
license = "MIT"
rust-version = "1.85.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
anyhow = "1"
dirs = "6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
owo-colors = "4"
indicatif = "0.17"
ctrlc = "3"

[dev-dependencies]
tempfile = "3"
