[package]
name = "rx"
version = "0.1.0"
edition = "2024"
description = "A fast, unified Rust toolchain manager"
license = "MIT"
rust-version = "1.85.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
anyhow = "1"
dirs = "6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
walkdir = "2"
time = { version = "0.3", features = ["formatting", "parsing", "macros", "serde"] }
owo-colors = "4"
indicatif = "0.17"
ctrlc = "3"
serde_json = "1"
notify = "7"
notify-debouncer-mini = "0.5"
rayon = "1.10"
reflink-copy = "0.1"
syn = { version = "2", features = ["full", "parsing"] }
quote = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
debug = 1

[dev-dependencies]
tempfile = "3"
